Update landing page: Add Open Graph meta tags, FormSubmit integration, and content improvements

--- a/index.html
+++ b/index.html
@@ -8,6 +8,32 @@
     <meta name="description"
         content="Portafolio de Ovidio Jaramillo, experto en investigación de biodiversidad, análisis de datos ambientales y GIS.">
 
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://ovijar.github.io/">
+    <meta property="og:title" content="Ovidio Jaramillo | Analista de Datos Ambientales y Ornitólogo">
+    <meta property="og:description"
+        content="Experto en investigación de biodiversidad, evaluación de impacto ambiental, análisis geoespacial y programación backend. Especializado en monitoreo aviar y análisis de datos ambientales.">
+    <meta property="og:image" content="https://ovijar.github.io/og-image.png">
+    <meta property="og:image:width" content="1200">
+    <meta property="og:image:height" content="630">
+    <meta property="og:locale" content="es_ES">
+    <meta property="og:site_name" content="Ovidio Jaramillo Portfolio">
+
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:url" content="https://ovijar.github.io/">
+    <meta name="twitter:title" content="Ovidio Jaramillo | Analista de Datos Ambientales y Ornitólogo">
+    <meta name="twitter:description"
+        content="Experto en investigación de biodiversidad, evaluación de impacto ambiental, análisis geoespacial y programación backend.">
+    <meta name="twitter:image" content="https://ovijar.github.io/og-image.png">
+
+    <!-- Additional SEO -->
+    <meta name="author" content="Ovidio Jaramillo">
+    <meta name="keywords"
+        content="analista de datos ambientales, ornitólogo, biodiversidad, GIS, QGIS, Python, R, SQL, evaluación de impacto ambiental, monitoreo aviar, conservación, análisis geoespacial">
+    <link rel="canonical" href="https://ovijar.github.io/">
+
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
