Add complete Open Graph meta tags for WhatsApp, LinkedIn, Facebook and Twitter

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description"
         content="Portafolio de Ovidio Jaramillo, experto en investigación de biodiversidad, análisis de datos ambientales y GIS.">
 
-    <!-- Open Graph / Facebook -->
+    <!-- Open Graph / Facebook / WhatsApp / LinkedIn -->
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://ovijar.github.io/">
     <meta property="og:title" content="Ovidio Jaramillo | Analista de Datos Ambientales y Ornitólogo">
@@ -17,6 +17,8 @@
     <meta property="og:image" content="https://ovijar.github.io/og-image.png">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
+    <meta property="og:image:alt" content="Ovidio Jaramillo - Analista de Datos Ambientales y Ornitólogo">
+    <meta property="og:image:type" content="image/png">
     <meta property="og:locale" content="es_ES">
     <meta property="og:site_name" content="Ovidio Jaramillo Portfolio">
 
